--- a/index.html
+++ b/index.html
@@ -34,5 +34,22 @@
     <p>Se for pra ser, será.</p>
     <p>E o impossível vai tornar-se possível</p>
     <p>E ai um grande amor todos vão conhecer e eternizar.</p>
+
+     <div class="conteudo">
+        <div class="esquerda">
+            <img src=https://i.pinimg.com/originals/e4/34/2a/e4342a4e0e968344b75cf50cf1936c09.jpg"" alt="">
+        </div>
+        <div class="direita">
+           <ol>
+            <li>Linha 1</li>
+            <li>Linha 2</li>
+            <li>Linha 3</li>
+            <li>Linha 4</li>
+            <li>Linha 5</li>
+           </ol>
+        </div>
+     </div>
+
+
 </body>
 </html>
