--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
      <div class="conteudo">
         <div class="esquerda">
-            <img src=https://i.pinimg.com/originals/e4/34/2a/e4342a4e0e968344b75cf50cf1936c09.jpg"" alt="">
+            <img src="https://i.pinimg.com/originals/e4/34/2a/e4342a4e0e968344b75cf50cf1936c09.jpg" alt="">
         </div>
         <div class="direita">
            <ol>
